# austral

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  NOTES.md  README.md  ROADMAP.md  TODO.txt  austral-exe.mlb  austral-test.cm  austral-test.mlb  austral.cm  austral.mlb  austral.opam  boreal-test.cm  boreal-test.mlb  boreal.cm  boreal.mlb  concat_builtins.py  diagram.dot  dune-project  flake.nix  install-ocaml-deps.sh  linear-buffer.md  lvalues.md  make_conversion_functions.py  prelude.awk  run-examples.sh  run-tests.sh  runtime.awk  shell.nix
docs/: .gitignore  Makefile  architecture.mmd  internals.md  paths.md  walkthrough.md
editor/: austral-mode.el
examples/: Makefile  README.md
lib/: AbstractionPass.ml  AbstractionPass.mli  AcmCode.ml  AcmFile.ml  AcmSerialization.ml  AcmSerialization.mli  Appearances.ml  Appearances.mli  Ast.ml  Ast.mli  BodyExtractionPass.ml  BodyExtractionPass.mli  BuiltIn.ml  BuiltIn.mli  BuiltInModules.mli  CPrelude.ml  CRenderer.ml  CRenderer.mli  CRepr.ml  Cli.ml  Cli.mli  CliEngine.ml  CliEngine.mli  CliParser.ml  CliParser.mli  CliUtil.ml  CliUtil.mli  CodeGen.ml  CodeGen.mli  CodeGen2.ml  CodeGen2.mli  Combined.ml  Combined.mli  CombiningPass.ml  CombiningPass.mli  Common.ml  Common.mli  CompiledModule.ml  Compiler.ml  Compiler.mli  (+150 more)
lib/builtin/: Memory.aui  Memory.aum  Pervasive.aui  Pervasive.aum
src/: alpha.sig  alpha.sml  arith.sig  arith.sml  ast.sig  ast.sml  builtin.sig  builtin.sml  c-ast.sig  c-ast.sml  c-backend.sig  c-backend.sml  c-renderer.sig  c-renderer.sml  c-runtime.sml  cli.sig  cli.sml  compiler.sig  compiler.sml  cpp-ast.sig  cpp-ast.sml  cpp-backend.sig  cpp-backend.sml  cst.sig  cst.sml  dast.sig  dast.sml  emtast.sig  emtast.sml  escape.sig  escape.sml  fdefs.sig  fdefs.sml  function.sig  function.sml  hir-pass.sig  hir-pass.sml  hir.sig  (+77 more)
(+890 files in other folders)
