(ocamllex Lexer)
(menhir
 (modules Parser))

(library
 (name austral_core)
 (public_name austral.austral_core)
 (synopsis "The bootstrapping compiler for Austral.")
 (libraries unix str sexplib)
 (preprocess (pps ppx_deriving.eq ppx_deriving.show))
 (flags
  ;menhir generates instances of the "unused rec flag"
  ; warning
  (:standard -w -39)))

(documentation)
